namespace java com.ishangke.edunav.commoncontract.model

/**
 * PartnerBo
 */
struct PartnerBo {
  1: i32 id
  2: string name
}